[Java] Enable dynamic agent loading on JDK 22 + run ByteBuddy in the experimental mode.